# swdev-solution

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  build-docker.sh  install-opencv.sh  main.cpp
doc/: PossibleImprovements.md  application-trace.txt  prototype-trace.txt
include/: data.hpp
prototype/: img_registration.ipynb
src/: data.cpp  main.cpp
tests/: CMakeLists.txt  data_test.cpp
travis/: install-cmake.sh  install-opencv.sh
